objects/Legal_Commitment__c.object
<CustomObject>
    <description>Used to track customer based commitments at each agreement type level for an account</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Commitments</relationshipLabel>
        <relationshipName>Legal_Commitments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.Apttus__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Legal Commitments</relationshipLabel>
        <relationshipName>Legal_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>DTLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Legal_Agreement__c</fullName>
        <label>Base Legal Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Commitment_Status__c</fullName>
        <label>Legal Commitment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed - Non-Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Standard_PQ_Exhibit_Comments__c</fullName>
        <label>Non-Standard PQ/Exhibit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Legal_Review_Required__c</fullName>
        <label>Special Legal Review Required</label>
        <type>TextArea</type>
    </fields>
    <label>Legal Commitment</label>
    <nameField>
        <displayFormat>LCN-{0000}</displayFormat>
        <label>Legal Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Required_Legal_Commitment_Status</fullName>
        <active>true</active>
        <description>Legal Commitment Status is required when either “Non-standard PQ/Exhibit Comments” or the “Special legal Review Required” is not blank</description>
        <errorConditionFormula>AND
( 
$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;,
$User.Is_Data_Steward__c = FALSE,
$User.LastName &lt;&gt; &apos;Migration&apos;,
NOT($Profile.Name = &apos;Integration&apos;),
OR( NOT(ISBLANK( Non_Standard_PQ_Exhibit_Comments__c )),
NOT(ISBLANK(  Special_Legal_Review_Required__c  ))) , 
ISPICKVAL(Legal_Commitment_Status__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Legal_Commitment_Status__c</errorDisplayField>
        <errorMessage>Please select Legal Commitment status</errorMessage>
    </validationRules>
</CustomObject>